# semantic-router-sale

./: .env.examples  .gitignore  README.md  cleandata.py  docker-compose.yml  evaluate.py  main.py  pyproject.toml  requirments.txt  temp.md
src/chatwoot_mailer/: main.py
src/test/: router_model.pkl  test copy.py  test.py  test_0.py  test_1.py  test_1_vec.py  test_2.py  train_router.py
src/utils/: embedding-local.py  read-jsonl.py  read_jsonl.py  vector-store.py  vector_store.py
visualization/: app.py  index.html
