[project]
name = "semantic-router-sale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.103.1",
    "joblib>=1.5.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-qdrant>=1.1.0",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.24",
    "qdrant-client>=1.17.1",
    "scikit-learn>=1.8.0",
    "semantic-router<1.0",
    "sqlite-vec>=0.1.9",
    "transformers>=5.5.0",
    "uvicorn[standard]>=0.43.0",
]
